<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_phone_booster">

    <fragment
        android:id="@+id/navigation_optimizer"
        android:name="com.missclickads.cleaner.ui.optimizer.OptimizerFragment"
        android:label="@string/title_optimizer"
        tools:layout="@layout/fragment_optimizer" />

    <fragment
        android:id="@+id/navigation_phone_booster"
        android:name="com.missclickads.cleaner.ui.phonebooster.PhoneBoosterFragment"
        android:label="@string/title_phone_booster"
        tools:layout="@layout/fragment_phone_booster" />

    <fragment
        android:id="@+id/navigation_battery_saver"
        android:name="com.missclickads.cleaner.ui.batterysaver.BatterySaverFragment"
        android:label="@string/title_battery_saver"
        tools:layout="@layout/fragment_battery_saver" />

    <fragment
        android:id="@+id/navigation_junk_cleaner"
        android:name="com.missclickads.cleaner.ui.junkcleaner.JunkCleanerFragment"
        android:label="@string/title_junk_cleaner"
        tools:layout="@layout/fragment_junk_cleaner" />
</navigation>