<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.phonebooster.PhoneBoosterFragment">

    <TextView
        android:id="@+id/text_cleaning_required2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="41dp"
        android:text="@string/cleaning_required"
        android:textColor="@color/gradient_start"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <TextView
        android:id="@+id/text_cleaning_required3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="41dp"
        android:text="@string/cleaning_required"
        android:textColor="@color/gradient_start"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3" />

    <TextView
        android:id="@+id/text_cleaning_required4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="41dp"
        android:text="@string/cleaning_required"
        android:textColor="@color/gradient_start"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4" />

    <TextView
        android:id="@+id/text_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_junk_cleaner"
        android:textAlignment="center"

        android:textColor="@color/fragment_name"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:src="@drawable/ic_ellipse"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fragment_name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:src="@drawable/ic_ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_system_junk" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_residual_files" />

    <ImageView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_temporary_files" />

    <ImageView
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cache_memory" />

    <TextView
        android:id="@+id/text_cache_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="39dp"
        android:text="@string/cache_memory"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_temporary_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="6dp"
        android:text="@string/temporary_files"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4" />

    <TextView
        android:id="@+id/text_residual_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="6dp"
        android:text="@string/residual_files"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3" />

    <TextView
        android:id="@+id/text_system_junk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="6dp"
        android:text="@string/system_junk"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <TextView
        android:id="@+id/text_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.5 GB"
        android:textStyle="bold"
        android:textColor="@color/gradient_start"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/text_cleaning_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="41dp"
        android:text="@string/cleaning_required"

        android:textColor="@color/gradient_start"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_optimize"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/ic_progress_bar_horizontal"
        android:text="@string/optimize"
        android:textAllCaps="false"
        android:textColor="@color/btn_opt"
        android:textSize="17dp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_system_junk"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/image_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>