<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.batterysaver.BatterySaverFragment">


    <TextView
        android:id="@+id/text_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_battery_saver"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/fragment_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="17dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/text_fragment_name">
    </com.google.android.gms.ads.AdView>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:src="@drawable/ic_ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fragment_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_charging_time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="79dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/charging_time_remaining"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="102dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="@color/gradient_orange_start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="18%"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textColor="@color/gradient_orange_start"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_optimize"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/ic_gradient_orange"
        android:text="@string/optimize"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:textColor="@color/btn_opt"
        android:textSize="17dp"
        app:cornerRadius="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_charging_time_remaining"
        app:layout_constraintVertical_bias="1.0" />
    <ImageView
        android:id="@+id/image_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="375dp"
        android:layout_height="300dp"
        android:layout_marginBottom="37dp"
        android:indeterminate="false"
        android:max="100"
        android:maxWidth="5dp"
        android:maxHeight="5dp"
        android:progressDrawable="@drawable/progress_bar_circle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/text_fragment_name"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/text_progressProc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60%"
        android:textStyle="bold"
        android:textColor="@color/gradient_orange_start"
        android:fontFamily="@font/montserrat"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>