<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.result.ResultFragment">


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="17dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fragment_name">
    </com.google.android.gms.ads.AdView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_42sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_gradient_orange"
        android:clipToPadding="false"
        android:fontFamily="@font/montserrat"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_8sdp"
        android:text="@string/title_junk_cleaner"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_42sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_gradient_orange"
        android:clipToPadding="false"
        android:fontFamily="@font/montserrat"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_8sdp"
        android:text="@string/title_optimizer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_42sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_gradient_orange"
        android:clipToPadding="false"
        android:fontFamily="@font/montserrat"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_8sdp"
        android:text="@string/title_battery_saver"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

    <TextView
        android:id="@+id/text_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_phone_booster"
        android:textAlignment="center"
        android:textColor="@color/fragment_name"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/ellipse_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fragment_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        app:srcCompat="@drawable/ic_ellipse2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/image_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_ok"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textCountOptimized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"

        android:text="1/4 optimization completed!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="You haven’t done some cleans:"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCountOptimized" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_42sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_gradient_orange"
        android:clipToPadding="false"
        android:fontFamily="@font/montserrat"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_8sdp"
        android:text="@string/title_phone_booster"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>